# python-raytrace

./: .gitignore  README.md  setup.cfg
scripts/: ch1.py  ch2.py  ch4.py  ch5.py  ch6-multiprocess.py  ch6.py  ch7.py  ch9.py
src/tracer/: __init__.py  cameras.py  hulls.py  lighting.py  matrices.py  patterns.py  physicals.py  rays.py  renderer.py  shared.py  transforms.py  tuples.py  worlds.py
tests/: test_cameras.py  test_hulls.py  test_lighting.py  test_matrices.py  test_normals.py  test_patterns.py  test_primitives.py  test_rays.py  test_rendering.py  test_transforms.py  test_world.py
