[metadata]
name = tracer-pathunstrom
version = 0.0.1
author = Piper Thunstrom
author_email = pathunstrom@gmail.com
description = A python ray tracing renderer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pathunstrom/python-raytrace
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
test = pytest